change some static page and added static controller

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,96 +1,16 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <div th:include="fragments/headerFragment.html"></div>
     <title>leopet || Home</title>
-    <link rel="icon" href="img/favicon.png">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- animate CSS -->
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <!-- themify CSS -->
-    <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- flaticon CSS -->
-    <link rel="stylesheet" href="css/flaticon.css">
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- style CSS -->
-    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 <!--::header part start::-->
 <header class="header_area">
-    <div class="sub_header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-4 col-md-4 col-xl-6">
-                    <div id="logo">
-                        <a href="index.html"><img src="img/Logo.png" alt="" title=""/></a>
-                    </div>
-                </div>
-                <div class="col-8 col-md-8 col-xl-6 ">
-                    <div class="sub_header_social_icon float-right">
-                        <a href="#"><i class="flaticon-phone"></i>+02 213 - 256 (365)</a>
-                        <a href="#" class="btn_1 d-none d-md-inline-block">Become a Volunteer</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="main_menu">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                            <i class="ti-menu"></i>
-                        </button>
-
-                        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link active" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="about.html" class="nav-link">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="services.html" class="nav-link">services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="gallery.html" class="nav-link">gallery</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="elements.html">Elements</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="blog.html" class="nav-link">blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="contact.html" class="nav-link">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div th:include="fragments/headerPartStartFragment.html"></div>
+    <!--::menu bar::-->
+    <div th:include="fragments/menuFragment.html"></div>
 </header>
 <!-- Header part end-->
 
@@ -117,12 +37,12 @@
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
                 <div class="about_img">
-                    <img src="img/about.png" alt="">
+                    <img th:src="@{/img/about.png}" alt="">
                 </div>
             </div>
             <div class="col-md-5">
                 <div class="about_text">
-                    <img src="img/about_icon.png" class="about_icon" alt="">
+                    <img th:src="@{/img/about_icon.png}" class="about_icon" alt="">
                     <h2>We care your pet
                         As you care</h2>
                     <p>Working in conjunction with humanitarian aid agencies, we have supported programmes to help
@@ -142,7 +62,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="section_tittle text-center">
-                    <img src="img/about_icon.png" alt="">
+                    <img th:src="@{/img/about_icon.png}" alt="">
                     <h2>We Provide Best Services</h2>
                     <p>Working in conjunction with humanitarian aid agencies, we have supported programmes to help
                         alleviate human suffering through animal welfare when people might depend.</p>
@@ -152,7 +72,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-6">
                 <div class="single_service_part">
-                    <img src="img/single_service_1.png" alt="#">
+                    <img th:src="@{/img/single_service_1.png}" alt="#">
                     <h3>Pet Surgeries</h3>
                     <p>Our free veterinary services are available to pets whose owners are on certain means-tested
                         benefits.</p>
@@ -160,7 +80,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="single_service_part">
-                    <img src="img/single_service_2.png" alt="#">
+                    <img th:src="@{/img/single_service_2.png}" alt="#">
                     <h3>Pet Adoption</h3>
                     <p>Our free veterinary services are available to pets whose owners are on certain means-tested
                         benefits.</p>
@@ -168,7 +88,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="single_service_part">
-                    <img src="img/single_service_3.png" alt="#">
+                    <img th:src="@{/img/single_service_3.png}" alt="#">
                     <h3>Pet Care</h3>
                     <p>Our free veterinary services are available to pets whose owners are on certain means-tested
                         benefits.</p>
@@ -191,12 +111,12 @@
                         human.</p>
                     <div class="counter_number">
                         <div class="single_counter_number">
-                            <img src="img/adopt_icon_1.png" alt="#">
+                            <img th:src="@{/img/adopt_icon_1.png}" alt="#">
                             <h3><span class="count">590</span>+</h3>
                             <p>Pets Available</p>
                         </div>
                         <div class="single_counter_number">
-                            <img src="img/adopt_icon_2.png" alt="#">
+                            <img th:src="@{/img/adopt_icon_2.png}" alt="#">
                             <h3><span class="count">300</span>+</h3>
                             <p>Happy Clients</p>
                         </div>
@@ -206,7 +126,7 @@
             </div>
             <div class="col-lg-6 col-md-6">
                 <div class="adopt_image">
-                    <img src="img/adopt_img.png" alt="#">
+                    <img th:src="@{/img/adopt_img.png}" alt="#">
                 </div>
             </div>
         </div>
@@ -221,19 +141,19 @@
             <div class="col-lg-7">
                 <div class="client_review_content owl-carousel">
                     <div class="singke_client_review">
-                        <img src="img/review_img_1.png" alt="#">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
                         <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
                             alleviate.</h4>
                         <p>- Jon Miller</p>
                     </div>
                     <div class="singke_client_review">
-                        <img src="img/review_img_1.png" alt="#">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
                         <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
                             alleviate.</h4>
                         <p>- Jon Miller</p>
                     </div>
                     <div class="singke_client_review">
-                        <img src="img/review_img_1.png" alt="#">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
                         <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
                             alleviate.</h4>
                         <p>- Jon Miller</p>
@@ -251,12 +171,12 @@
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
                 <div class="about_img">
-                    <img src="img/valunteer_img.png" alt="">
+                    <img th:src="@{/img/valunteer_img.png}" alt="">
                 </div>
             </div>
             <div class="col-md-5">
                 <div class="about_text">
-                    <img src="img/about_icon.png" class="about_icon" alt="">
+                    <img th:src="@{/img/about_icon.png}" class="about_icon" alt="">
                     <h2>Become a Volunteer
                         To help them</h2>
                     <p>A created won't created subdue a every green his set which above firmament earth firmament. Seed
@@ -326,7 +246,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="copyright_text">
-                    <img src="img/footer_logo.png" alt="#">
+                    <img th:src="@{/img/footer_logo.png}" alt="#">
                     <p class="footer-text">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script>
@@ -339,24 +259,7 @@
     </div>
 </footer>
 <!-- footer part end-->
-
-<!-- jquery plugins here-->
-<!-- jquery -->
-<script src="js/jquery-1.12.1.min.js"></script>
-<!-- popper js -->
-<script src="js/popper.min.js"></script>
-<!-- bootstrap js -->
-<script src="js/bootstrap.min.js"></script>
-<!-- counterup js -->
-<script src="js/jquery.counterup.min.js"></script>
-<!-- waypoints js -->
-<script src="js/waypoints.min.js"></script>
-<!-- easing js -->
-<script src="js/jquery.magnific-popup.js"></script>
-<!-- particles js -->
-<script src="js/owl.carousel.min.js"></script>
-<!-- custom js -->
-<script src="js/custom.js"></script>
+<div th:include="fragments/scriptFragment.html"></div>
 </body>
 
 </html>
