--- a/pet-clinic-web/src/main/resources/templates/contact.html
+++ b/pet-clinic-web/src/main/resources/templates/contact.html
@@ -1,93 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>leopet || about</title>
-    <link rel="icon" href="img/favicon.png">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- animate CSS -->
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <!-- themify CSS -->
-    <link rel="stylesheet" href="css/themify-icons.css">
-    <!-- flaticon CSS -->
-    <link rel="stylesheet" href="css/flaticon.css">
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- style CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <div th:include="fragments/headerFragment.html"></div>
 </head>
 
 <body>
     <!--::header part start::-->
     <header class="header_area">
-        <div class="sub_header">
-            <div class="container">
-                <div class="row align-items-center">
-                  <div class="col-4 col-md-4 col-xl-6">
-                      <div id="logo">
-                          <a href="index.html"><img src="img/Logo.png" alt="" title="" /></a>
-                      </div>
-                  </div>
-                  <div class="col-8 col-md-8 col-xl-6 ">
-                      <div class="sub_header_social_icon float-right">
-                        <a href="#"><i class="flaticon-phone"></i>+02 213 - 256 (365)</a>
-                        <a href="#" class="btn_1 d-none d-md-inline-block">Become a Volunteer</a>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="main_menu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <i class="ti-menu"></i>
-                            </button>
-
-                            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="about.html" class="nav-link active">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="services.html" class="nav-link">services</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="gallery.html" class="nav-link">gallery</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Pages
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="blog.html" class="nav-link">blog</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="contact.html" class="nav-link">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:include="fragments/headerPartStartFragment.html"></div>
+        <!--::menu bar::-->
+        <div th:include="fragments/menuFragment.html"></div>
     </header>
     <!-- Header part end-->
 
@@ -144,7 +69,7 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+          <form class="form-contact contact_form" action="../static/contact_process.php" method="post" id="contactForm" novalidate="novalidate">
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
@@ -258,7 +183,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="copyright_text">
-                        <img src="img/footer_logo.png" alt="#">
+                        <img src="../static/img/footer_logo.png" alt="#">
                         <p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
@@ -270,28 +195,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- footer part end-->
 
     <!-- jquery plugins here-->
-    <!-- jquery -->
-    <script src="js/jquery-1.12.1.min.js"></script>
-    <!-- popper js -->
-    <script src="js/popper.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- counterup js -->
-    <script src="js/jquery.counterup.min.js"></script>
-    <!-- waypoints js -->
-    <script src="js/waypoints.min.js"></script>
-    <!-- easing js -->
-    <script src="js/jquery.magnific-popup.js"></script>
-    <!-- particles js -->
-    <script src="js/owl.carousel.min.js"></script>
-
-    <script src="js/contact.js"></script>
-    <script src="js/jquery.ajaxchimp.min.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/mail-script.js"></script>
-    <!-- custom js -->
-    <script src="js/custom.js"></script>
+    <div th:include="fragments/scriptFragment.html"></div>
 </body>
 
 </html>
