added intern, but work only hard swith for browser

--- a/pet-clinic-web/src/main/resources/templates/fragments/headerPartStartFragment.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/headerPartStartFragment.html
@@ -12,8 +12,8 @@
                     <a href="#" class="btn_1 d-none d-md-inline-block">Become a Volunteer</a>
 
                     <div class="sub_header_social_icon float-lg-right">
-                        <a href="?locale=en" class="text-uppercase">ua</a>
-                        <a href="?locale=ru" class="text-uppercase">ru</a>
+                        <a href="?lang=uk" class="text-uppercase">ua</a>
+                        <a href="?lang=ru" class="text-uppercase">ru</a>
                     </div>
                 </div>
 
