added loginController and page

--- a/pet-clinic-web/src/main/resources/templates/fragments/headerFragment.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/headerFragment.html
@@ -1,20 +1,23 @@
 <!--<th:block th:fragment="header">-->
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" th:href="@{/img/favicon.png}" >
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet"  th:href="@{/css/bootstrap.min.css}">
-    <!-- animate CSS -->
-    <link rel="stylesheet" th:href="@{/css/animate.css}">
-    <!-- owl carousel CSS -->
-    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}">
-    <!-- themify CSS -->
-    <link rel="stylesheet" th:href="@{/css/themify-icons.css}">
-    <!-- flaticon CSS -->
-    <link rel="stylesheet" th:href="@{/css/flaticon.css}">
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" th:href="@{/css/magnific-popup.css}">
-    <!-- style CSS -->
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" th:href="@{/img/favicon.png}">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+<!-- animate CSS -->
+<link rel="stylesheet" th:href="@{/css/animate.css}">
+<!-- owl carousel CSS -->
+<link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}">
+<!-- themify CSS -->
+<link rel="stylesheet" th:href="@{/css/themify-icons.css}">
+<!-- flaticon CSS -->
+<link rel="stylesheet" th:href="@{/css/flaticon.css}">
+<!-- font awesome CSS -->
+<link rel="stylesheet" th:href="@{/css/magnific-popup.css}">
+<!-- style CSS -->
+<link rel="stylesheet" th:href="@{/css/style.css}">
 <!--</th:block>-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
