--- a/pet-clinic-web/src/main/resources/templates/fragments/menuFragment.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/menuFragment.html
@@ -36,6 +36,16 @@
                             <li class="nav-item">
                                 <a th:href="@{/contact}" class="nav-link">Contact</a>
                             </li>
+<!--                            <li class="nav-item dropdown">-->
+<!--                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"-->
+<!--                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                                    Pages-->
+<!--                                </a>-->
+<!--                                <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">-->
+<!--                                    <a class="dropdown-item" th:href="@{admin/owners.html}">Owners</a>-->
+<!--                                    <a class="dropdown-item" th:href="@{admin/pets.html}">Pets and Visit</a>-->
+<!--                                </div>-->
+<!--                            </li>-->
                         </ul>
                     </div>
                 </nav>
