--- a/pet-clinic-web/src/main/resources/templates/fragments/headerPartStartFragment.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/headerPartStartFragment.html
@@ -9,15 +9,15 @@
             <div class="col-8 col-md-8 col-xl-8">
                 <div class="sub_header_social_icon float-md-right">
                     <a href="#"><i class="flaticon-phone"></i>+380-50-103-1003</a>
-                    <a href="#" class="btn_1 d-none d-md-inline-block">Become a Volunteer</a>
+                    <a th:href="@{/login-form}" type="button" class="btn_1 d-none d-md-inline-block nav-link ">Sign In
+                    </a>
 
                     <div class="sub_header_social_icon float-lg-right">
                         <a href="?lang=uk" class="text-uppercase">ua</a>
                         <a href="?lang=ru" class="text-uppercase">ru</a>
                     </div>
+
                 </div>
-
-
             </div>
         </div>
     </div>
