--- a/pet-clinic-web/src/main/resources/templates/fragments/scriptFragment.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/scriptFragment.html
@@ -15,3 +15,9 @@
 <script th:src="@{/js/owl.carousel.min.js}"></script>
 <!-- custom js -->
 <script th:src="@{/js/custom.js}"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
