--- a/pet-clinic-web/src/main/resources/templates/login.html
+++ b/pet-clinic-web/src/main/resources/templates/login.html
@@ -1,97 +1,78 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:with="lang=${#locale.language}" th:lang="${lang}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml"
+      th:with="lang=${#locale.language}" th:lang="${lang}"
+      layout:decorate="~{fragments/layout}">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Login</title>
-    <div th:include="fragments/headerFragment.html"></div>
 </head>
 <body>
-<header class="header_area">
-    <div th:include="fragments/headerPartStartFragment.html"></div>
-    <!--::menu bar::-->
-    <div th:include="fragments/menuFragment.html"></div>
-</header>
-<section class="banner_part">
+<section class="banner_part" layout:fragment="section1">
     <div class="container">
-        <div class="row align-content-center">
-            <div class="col-lg-7 col-xl-6">
-                <div class="text-xl-left" id="sign-in">
-                    <div class="container">
-                        <div class="row site-hero-inner justify-content-center align-items-center">
-                            <div class="col-md-10 text-center" data-aos="fade-up">
+        <div class="col-lg-4">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="row">
+                        <form th:action="@{/login-confirm}" method="post"
+                              class="bg-white p-4" th:object="${loginForm}">
+                            <div class="row mb-4">
+                                <div class="col-12"><h2> Sign In</h2>
 
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-body">
-                                            <div class="row">
-                                                <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+                                </div>
+                            </div>
 
-                                                    <form th:action="@{/processing-login}" method="post"
-                                                          class="bg-white p-4" th:object="${loginForm}">
-                                                        <div class="row mb-4">
-                                                            <div class="col-12"><h2> signIn</h2>
+                            <div class="row">
+                                <div class="col-md-12 form-group">
+                                    <input class="text-black font-weight-bold"
+                                           th:field="*{email}"> Email</input>
 
-                                                            </div>
-                                                        </div>
-                                                        <div class="row">
-
-                                                            <div class="col-md-12 form-group">
-                                                                <input class="text-black font-weight-bold"
-                                                                       th:field="*{email}">Email</input>
-                                                            </div>
-                                                            <div th:if="${#fields.hasErrors('email')}" style="margin-bottom: 25px"
-                                                                 class="text-danger">
-                                                                <ul>
-                                                                    <li th:each="err : ${#fields.errors('email')}"
-                                                                        th:text="'Email ' + ${err}"></li>
-                                                                </ul>
-                                                            </div>
-                                                            <div class="col-md-12 form-group">
-                                                                <input class="text-black font-weight-bold" th:field="*{password}">
-                                                                Password
-                                                                </input>
-                                                                <div th:if="${#fields.hasErrors('password')}"
-                                                                     style="margin-bottom: 25px" class="text-danger">
-                                                                    <ul>
-                                                                        <li th:each="err : ${#fields.errors('password')}"
-                                                                            th:text="'Password ' + ${err}"></li>
-                                                                    </ul>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="d-flex justify-content-between align-content-end w-100 col-auto">
-                                                                    <div class="text-left">
-                                                                        <p>
-                                                                            HaveNotAccount
-                                                                        </p>
-                                                                        <a class="nav-link btn btn-primary"
-                                                                           href="registration-form">
-                                                                            Register
-                                                                        </a>
-                                                                    </div>
-                                                                    <input type="submit"
-                                                                           value="signIn"
-                                                                           style="right: auto; align-self: flex-end;"
-                                                                           class="btn btn-primary">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div th:if="${#fields.hasErrors('email')}"
+                                         style="margin-bottom: 25px"
+                                         class="text-danger">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('email')}"
+                                                th:text="'Email ' + ${err}"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <input class="text-black font-weight-bold"
+                                           th:field="*{password}"> Password
+                                    </input>
+                                    <div th:if="${#fields.hasErrors('password')}"
+                                         style="margin-bottom: 25px" class="text-danger">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('password')}"
+                                                th:text="'Password ' + ${err}"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div th:unless="!${#request.getParameter('error')}"
+                                     style="margin-bottom: 25px"
+                                     class="text-danger">
+                                    Password or email not valid
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 form-group"></div>
+                                    <div class="col-md-12 form-group">
+                                        <a class="btn_1 d-none d-md-inline-block nav-link"
+                                           type="button"
+                                           th:href="@{/new}">
+                                            New Account
+                                        </a>
+                                        <input class="btn_1 d-none d-md-inline-block nav-link pull-right" type="submit"
+                                               value="Sign In"
+                                               style="right: auto; align-self: flex-end;"/>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<div th:include="fragments/endFragment.html"></div>
-<div th:include="fragments/scriptFragment.html"></div>
+
 </body>
 </html>
