--- a/pet-clinic-web/src/main/resources/templates/fragments/header.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
             <div class="col-8 col-md-8 col-xl-8">
                 <div class="sub_header_social_icon float-md-right">
                     <a href="#"><i class="flaticon-phone"></i>+380-50-103-1003</a>
-                    <a th:href="@{/login-form}" type="button" class="btn_1 d-none d-md-inline-block nav-link ">Sign In
+                    <a th:href="@{/sign-in}" type="button" class="btn_1 d-none d-md-inline-block nav-link ">Sign In
                     </a>
 
                     <div class="sub_header_social_icon float-lg-right">
