--- a/pet-clinic-web/src/main/resources/templates/gallery.html
+++ b/pet-clinic-web/src/main/resources/templates/gallery.html
@@ -9,9 +9,9 @@
 <body>
 <!--::header part start::-->
 <header class="header_area">
-    <div th:include="fragments/headerPartStartFragment.html"></div>
+    <div th:include="fragments/header.html"></div>
     <!--::menu bar::-->
-    <div th:include="fragments/menuFragment.html"></div>
+    <div th:include="fragments/menu.html"></div>
 </header>
 <!-- Header part end-->
 
