--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,22 +1,14 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:with="lang=${#locale.language}" th:lang="${lang}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml"
+      th:with="lang=${#locale.language}" th:lang="${lang}" layout:decorate="~{fragments/layout}">
 <head>
     <div th:include="fragments/headerFragment.html"></div>
     <title>leopet || Home</title>
 </head>
 
 <body>
-<!--::header part start::-->
-<header class="header_area">
-    <div th:include="fragments/headerPartStartFragment.html"></div>
-    <!--::menu bar::-->
-    <div th:include="fragments/menuFragment.html"></div>
-</header>
-<!-- Header part end-->
 
-<!-- banner part start-->
-<section class="banner_part">
+<section class="banner_part" layout:fragment="section1">
     <div class="container">
         <div class="row align-content-center">
             <div class="col-lg-7 col-xl-6">
@@ -33,7 +25,7 @@
 <!-- banner part start-->
 
 <!-- about part start-->
-<section class="about_part section_padding">
+<section class="about_part section_padding"  layout:fragment="section2">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
@@ -58,7 +50,7 @@
 <!-- about part start-->
 
 <!-- service part start-->
-<section class="service_part section_padding services_bg">
+<section class="service_part section_padding services_bg"  layout:fragment="section3">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -101,7 +93,7 @@
 <!-- service part end-->
 
 <!-- counter adopt number here -->
-<section class="abopt_number_counter section_padding">
+<section class="abopt_number_counter section_padding"  layout:fragment="section4">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-5 col-md-6">
@@ -136,7 +128,7 @@
 <!-- counter adopt number end -->
 
 <!-- client review part here -->
-<section class="client_review">
+<section class="client_review" layout:fragment="section5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7">
@@ -167,7 +159,7 @@
 <!-- client review part end -->
 
 <!-- about part start-->
-<section class="about_part section_padding">
+<section class="about_part section_padding"  layout:fragment="section6">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
@@ -188,12 +180,7 @@
         </div>
     </div>
 </section>
-<!-- about part end-->
 
-<!-- footer part start-->
-<div th:include="fragments/endFragment.html"></div>
-<!-- footer part end-->
-<div th:include="fragments/scriptFragment.html"></div>
 </body>
 
 </html>
